# NACRe

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  NACRe.sln  NACRe.vcxproj  NACRe.vcxproj.filters  README.md  cubes.sln  cubes.vcxproj  cubes.vcxproj.filters  imgui.ini
data/Shader/: BasicDiffuse.frag  BasicDiffuse.vert  BasicPhong.frag  BasicPhong.vert  FlatColor.frag  FlatColor.vert
data/shader/: Cube.frag  Cube.vert  Light.vert
src/: Camera.cpp  Camera.h  Clock.cpp  Cube.cpp  Cube.h  Light.cpp  Light.h  Renderable.cpp  Renderable.h  Renderer.cpp  Renderer.h  ServiceLocator.cpp  ServiceLocator.h  Transform.cpp  Transform.h  main.cpp  par_shapes.h
src/Core/: Clock.cpp  Clock.h  Memory.h  ServiceLocator.cpp  ServiceLocator.h
src/Graphics/: Camera.cpp  Camera.h  Light.cpp  Light.h  Renderable.cpp  Renderable.h  Renderer.cpp  Renderer.h  Transform.cpp  Transform.h
src/ImGuiImpl/: imgui_impl_glfw_gl3.cpp  imgui_impl_glfw_gl3.h
src/Input/: InputManager.cpp  InputManager.h
src/Scene/: Cube.cpp  Cube.h  MinecraftCube.cpp  MinecraftCube.h  Scene.cpp  Scene.h  SceneNode.cpp  SceneNode.h  WhiteCube.cpp  WhiteCube.h
src/Texture/: GLTexture.cpp  GLTexture.h  TextureManager.cpp  TextureManager.h
src/VertexBuffer/: VertexBuffer.cpp  VertexBuffer.h  VertexBufferData.h  VertexBufferManager.cpp  VertexBufferManager.h
src/core/: Color.cpp  Color.h
src/cube/: Cube.cpp  Cube.h  CubePreRender.cpp  CubePreRender.h
src/mesh/: MeshCube.cpp  MeshCube.h  MeshLight.cpp  MeshLight.h  VertexBuffer.cpp  VertexBufferManager.cpp  VertexBufferManager.h
src/shader/: Program.cpp  Program.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  ShaderProgramManager.cpp  ShaderProgramManager.h
